# amtrak-ingestion

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: deploy.yml  documentation.yml  lint.yml  test.yml
amtraker_ingestion/: .chaliceignore  app.py  deploy.sh
amtraker_ingestion/.chalice/: config.json  policy-amtraker-ingest.json  requirements.txt  resources.json
amtraker_ingestion/.chalice/deployed/: dev.json
amtraker_ingestion/chalicelib/: __init__.py  config.py  constants.py  disk.py  gtfs.py  main.py  read.py  s3_upload.py  sample.json  timefilter.py  transform.py  utils.py  write.py
amtraker_ingestion/chalicelib/models/amtraker/: __init__.py  station.py
chalice/: constants.py  disk.py  gtfs.py  main.py  read.py  s3_upload.py  transform.py  utils.py  write.py
chalice/models/amtraker/: stationmeta.py  train_alert.py  trainresponse.py
chalice/models/app/: __init__.py
chaliceapp/: config.py  constants.py  disk.py  gtfs.py  main.py  read.py  s3_upload.py  timefilter.py  transform.py  utils.py  write.py
chaliceapp/models/amtraker/: train.py
docs/source/: api_endpoints.rst  api_reference.rst  architecture.rst  conf.py  configuration.rst  data_pipeline.rst  deployment.rst  getting_started.rst  index.rst
scripts/: backfill_collation.sh  test_collate_single_day.sh
tests/: README.md  conftest.py  test_app.py  test_constants.py  test_main.py  test_transform.py  test_utils.py
