[project]
name = "amtrak-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.70",
    "chalice>=1.32.0",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tzdata>=2025.2",
]
