[project]
name = "amtrak-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.70",
    "chalice>=1.32.0",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "moto>=5.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autobuild>=2024.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["amtraker_ingestion*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 79